--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 body {
-	background-color: #f2e3c1; /*#CDE5CC*/
+	background-color: #f2e6f0 /*#f2e3c1*/; /*#CDE5CC*/
 	max-width: 100%;
 
 
@@ -11,7 +11,10 @@ body {
 h1 {
 	
 	text-align: left; 
-	-webkit-transform: skewX(10deg);
+	-webkit-transform: skewX(30deg);
+	font-family: 'Jim Nightshade', cursive;
+	font-size: 40px;
+	top: 5px;
 
  /* -webkit-transform: skewX(50deg);
   position: */
@@ -19,11 +22,20 @@ h1 {
 }
 
 
+
+
 #email { 
-	 -webkit-transform: skewX(50deg);
+	 -webkit-transform: skewX(30deg);
+	 position: -webkit-sticky;
+	position: sticky;
+
+
 }
 #location { 
-	 -webkit-transform: skewX(50deg);
+	 -webkit-transform: skewX(30deg);
+	 position: -webkit-sticky;
+	position: sticky;
+
 }
 a { 
 	 -webkit-transform: skewX(50deg);
@@ -44,6 +56,7 @@ a:hover {
 	top: 20px;
 }
 
+
 .bfa  {
 
 	text-align: center;
@@ -51,7 +64,7 @@ a:hover {
 	margin-left: auto;
 	text-decoration: none;
 	display: inline-block;
-	background-color: #f2e3c1;
+	background-color: #f2e6f0 /*#f2e3c1*/;
 	
 }
 
@@ -70,7 +83,7 @@ a:hover {
 img {
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 50px;
+	margin-bottom: 250px;
 	margin-top: 50px;
 	width: 50%;
 	display: block;
@@ -81,8 +94,9 @@ img {
 iframe {
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 50px;
+	margin-bottom: 250px;
 	margin-top: 50px;
+	width: 50%;
 	
 	display: block;
 	box-shadow: 20px 20px 10px grey;
