style.css update

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ iframe {
 	margin-right: auto;
 	margin-bottom: 250px;
 	margin-top: 50px;
-	width: 50%;
+/*	width: 50%;*/
 	
 	display: block;
 	box-shadow: 20px 20px 10px grey;
